Adds the third Test and some good practice adjustments

--- a/globalParameters.properties
+++ b/globalParameters.properties
@@ -3,4 +3,5 @@ execution=local
 timeout.default=30
 url.default=https://mantis-prova.base2.com.br/
 download.defaul.path=C:/
-senhaGeral=123
+senhaGeral=L@3f4519
+usuarioGeral=agatha.franca
